# BezumiyVolkBot

./: .env.example  .gitignore  Cargo.toml  dictionaries.json  responses.json
deployment/: Dockerfile
src/: commands.rs  main.rs  models.rs
src/handlers/: add_trigger.rs  change_reply_frequency.rs  delete_trigger.rs  get_dict.rs  help.rs  init_users.rs  mod.rs  set_dict.rs  set_roast_level.rs  start.rs
src/utils/: deepseek.rs  dictionary.rs  mod.rs
