[package]
name = "BezumniyVolkBot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.16.0", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"
pretty_env_logger = "0.5"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

